--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -8,18 +8,6 @@
     android:background="@color/lavender"
     tools:context=".HistoryActivity">
 
-    <View
-        android:id="@+id/viewTopDivider"
-        android:layout_width="0dp"
-        android:layout_height="4dp"
-        android:background="@color/light_lavender"
-        app:layout_constraintBottom_toTopOf="@+id/imageViewDecoArc"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.358" />
-
     <ImageView
         android:id="@+id/imageViewDecoArc2"
         android:layout_width="288dp"
@@ -103,8 +91,51 @@
     <Space
         android:id="@+id/space"
         android:layout_width="wrap_content"
-        android:layout_height="200dp"
+        android:layout_height="100dp"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayoutButtons"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/your_past_adventure"
+        android:textColor="@color/white"
+        android:textSize="28sp"
+        android:textStyle="bold|italic"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/imageViewDecoArc"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageViewAirPlane"
+        android:layout_width="52dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="4dp"
+        android:contentDescription="@string/airplaneleft"
+        android:rotation="40"
+        app:layout_constraintEnd_toStartOf="@+id/textView2"
+        app:layout_constraintHorizontal_bias="0.725"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/airplane_icon" />
+
+    <ImageView
+        android:id="@+id/imageViewAirPlane2"
+        android:layout_width="52dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="16dp"
+        android:contentDescription="@string/airplaneleft"
+        android:rotation="40"
+        android:rotationY="180"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.35"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/airplane_icon" />
 </androidx.constraintlayout.widget.ConstraintLayout>
