--- a/app/src/main/res/layout/activity_save_trip_step3.xml
+++ b/app/src/main/res/layout/activity_save_trip_step3.xml
@@ -162,11 +162,10 @@
                         android:layout_weight="1"
                         android:padding="5dp"
                         android:text="@string/people_on_trip"
-                        android:textAlignment="center"
+                        android:textAlignment="textStart"
                         android:textColor="#5d5a63"
                         android:textSize="18sp"
                         android:textStyle="bold"
-
                         />
 
                     <LinearLayout
@@ -218,7 +217,7 @@
                         android:layout_weight="1"
                         android:padding="5dp"
                         android:text="@string/transport_trip"
-                        android:textAlignment="center"
+                        android:textAlignment="textStart"
                         android:textColor="#5d5a63"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -251,7 +250,7 @@
                         android:layout_weight="1"
                         android:padding="5dp"
                         android:text="@string/satisfaction_globals_cale"
-                        android:textAlignment="center"
+                        android:textAlignment="textStart"
                         android:textColor="#5d5a63"
                         android:textSize="18sp"
                         android:textStyle="bold" />
