--- a/app/src/main/res/layout-land/activity_save_trip_step3.xml
+++ b/app/src/main/res/layout-land/activity_save_trip_step3.xml
@@ -265,8 +265,7 @@
                             android:id="@+id/seekBarSatisfaction"
                             android:layout_width="150dp"
                             android:layout_height="wrap_content"
-                            android:max="10"
-                            android:progress="5" />
+                            android:max="10" />
 
                         <TextView
                             android:id="@+id/textViewSeekBarValue"
